# typed-command-builder

./: .gitignore  Cargo.toml  README.md  bors.toml  changelog.toml  flake.nix
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml  flake-update.yml
examples/: simple.rs
src/: lib.rs
typed-command-builder-derive/: Cargo.toml
typed-command-builder-derive/src/: field_info.rs  lib.rs  struct_info.rs  util.rs
